# small_ml_template

./: .dockerignore  .gitignore  README.md  dockerfile  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
models/: lr.joblib
src/credit_model/: api.py  train.py
tests/: test_api.py  test_train.py
